# simple-raycasting

./: CMakeLists.txt  README.md  Results.xlsx  cmake_command
include/: Bmp.hpp  Obj.hpp  Render.hpp  Structs.hpp  obj.hpp  pixel.hpp  ray.hpp  render.hpp
src/: benchmark.cpp  bmp.cpp  bmp.hpp  camera.cpp  camera.hpp  color.hpp  light.hpp  main.cpp  obj.cpp  ray.hpp  render.cpp  render.hpp
